--- a/app_module/translations/uk/LC_MESSAGES/messages.po
+++ b/app_module/translations/uk/LC_MESSAGES/messages.po
@@ -7,25 +7,26 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-05-20 10:29+0300\n"
-"PO-Revision-Date: 2018-05-20 10:27+0300\n"
+"POT-Creation-Date: 2018-05-20 14:10+0300\n"
+"PO-Revision-Date: 2018-05-20 14:11+0300\n"
 "Last-Translator: \n"
 "Language: uk\n"
 "Language-Team: uk <LL@li.org>\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
-"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.5.3\n"
+"X-Generator: Poedit 1.8.7.1\n"
 
 #: app_module/__init__.py:22
 msgid "Please log in to access this page."
 msgstr "Будь ласка, увійдіть, щоб отримати доступ до цієї сторінки."
 
 #: app_module/auth/email.py:8
-msgid "[Microblog] Reset Your Password"
-msgstr "[Мікроблог] Скиньте Свій Пароль"
+msgid "[Babak] Reset Your Password"
+msgstr "[Бабак] Скиньте Свій Пароль"
 
 #: app_module/auth/forms.py:9 app_module/auth/forms.py:16
 #: app_module/main/forms.py:10
@@ -180,8 +181,8 @@ msgid "%(username)s said %(when)s"
 msgstr "%(username)s сказав %(when)s"
 
 #: app_module/templates/base.html:4
-msgid "Welcome to Microblog"
-msgstr "Ласкаво просимо до Мікроблогу"
+msgid "Welcome to Babak"
+msgstr "Ласкаво просимо до Бабаку"
 
 #: app_module/templates/base.html:33
 msgid "Login"
@@ -312,3 +313,8 @@ msgstr "Виникла несподівана помилка"
 msgid "The administrator has been notified. Sorry for the inconvenience!"
 msgstr "Адміністратор вже було сповіщено. Вибачте за незручності!"
 
+#~ msgid "[Microblog] Reset Your Password"
+#~ msgstr "[Мікроблог] Скиньте Свій Пароль"
+
+#~ msgid "Welcome to Microblog"
+#~ msgstr "Ласкаво просимо до Мікроблогу"
